--- a/Palestine/Palestine.html
+++ b/Palestine/Palestine.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palestine</title>
     <link rel="stylesheet" href="Palestine.css">
-    <link rel="stylesheet" href="/H2/H2.css">
-    <link rel="icon" type="image/png" href="/images/palestine_15363010.png">
+    <link rel="stylesheet" href="./H2/H2.css">
+    <link rel="icon" type="image/png" href="./images/palestine_15363010.png">
 </head>
 <body>
   <nav class="navbar">
@@ -139,7 +139,7 @@
 
 <main>
   <div class="image-frame">
-    <img src="/images/children's.jpg" alt="Image 1" class="circle-image small">
+    <img src="../images/children's.jpg" alt="Image 1" class="circle-image small">
     <img src="/images/childs.jpg" alt="Image 2" class="circle-image medium">
     <img src="/images/attack.jpeg" alt="Image 3" class="circle-image large">
     <img src="/images/heart.jpg" alt="Image 4" class="circle-image xlarge">
@@ -150,7 +150,7 @@
 <div class="background-image"></div>
 <div class="card">
   <a href="./Israel/israel.html">
-    <img src="./Israel/img/israel.jpg" alt="Clickable Image" class="clickable-image">
+    <img src="/Israel/img/israel.jpg" alt="Clickable Image" class="clickable-image">
     <h1>Israel</h1>
 </a>
 <p>The Israeli Declaration Establishment of the State of Israel Hebrew was proclaimed on 14 May 1948 (5 Iyar 5708) by David Ben-Gurion,the Executive Head of the World Zionist Organization,Chairman of the Jewish Agency for Palestine, and later first Prime Minister of Israel</p>
@@ -159,7 +159,7 @@
 
 <div class="card">
   <a href="./IsraelAttackOnPalestine/Attack1948.html">
-    <img src="./IsraelAttackOnPalestine/images/Bethlehem.jfif" alt="Clickable Image" class="clickable-image">
+    <img src="/IsraelAttackOnPalestine/images/Bethlehem.jfif" alt="Clickable Image" class="clickable-image">
     <h1>Palestine</h1>
 </a>
 <p>On 15 November 1988, Palestinian National Council, the legislative body of the Palestine Liberation Organization (PLO) led by Yasser Arafat, declared the establishment of the State</p>
@@ -168,7 +168,7 @@
 
 <div class="card">
   <a href="/Hammaz-&-israel-War/Hammaz-Attack-On-Israel.html">
-    <img src="./IsraelAttackOnPalestine/images/Hammaz.jpg" alt="Clickable Image" class="clickable-image">
+    <img src="/IsraelAttackOnPalestine/images/Hammaz.jpg" alt="Clickable Image" class="clickable-image">
     <h1>Hamas</h1>
   </a>
   <p>Hamas or Harakat al-Muqawama al-Islamiyya(Islamic Resistance Movement),is a Palestinian political and military organization.It was established in 1987,during the First Intifada,which was a Palestinian uprising against Israeli occupation</p>
@@ -191,22 +191,22 @@
         
       </div>
       <div class="image">
-        <img src="/images/2020.webp" alt="Heart Icon">
+        <img src="./images/2020.webp" alt="Heart Icon">
         <div class="count" id="count2">0</div>
         <h2>Total Population 2020</h2>
       </div>
       <div class="image">
-        <img src="/images/myrtr.jfif" alt="Graduation Icon">
+        <img src="./images/myrtr.jfif" alt="Graduation Icon">
         <div class="count" id="count3">0</div>
         <h2>Martyr Palestinianes Ratio 2023</h2>
       </div>
       <div class="image">
-        <img src="/images/childss.jfif" alt="Medical Icon">
+        <img src="./images/childss.jfif" alt="Medical Icon">
         <div class="count" id="count4">0</div>
         <h2>childs Death Ratio 2023</h2>
       </div>
       <div class="image">
-        <img src="/images/alive1.jpg" alt="Medical Icon">
+        <img src="./images/alive1.jpg" alt="Medical Icon">
         <div class="count" id="count5">0</div>
         <h2>Alive People 2024</h2>
       </div>
@@ -537,9 +537,9 @@
    <!-- whatsapp api https://api.whatsapp.com/send?phone=923432983432&text= -- -->
         
 
-<script type="module" src="Palestine.js"></script>
-<script type="module" src="/H2/H2.js"></script>
-<script type="module" src="/H2/H4.js"></script>
+<script type="module" src="./Palestine.js"></script>
+<script type="module" src="./H2/H2.js"></script>
+<script type="module" src="./H2/H4.js"></script>
 </body>
 </html>
 
