--- a/Palestine/Palestine.html
+++ b/Palestine/Palestine.html
@@ -150,7 +150,7 @@
 <div class="background-image"></div>
 <div class="card">
   <a href="./Israel/israel.html">
-    <img src="../Israel/img/israel.jpg" alt="Clickable Image" class="clickable-image">
+    <img src="./Israel/img/israel.jpg" alt="Clickable Image" class="clickable-image">
     <h1>Israel</h1>
 </a>
 <p>The Israeli Declaration Establishment of the State of Israel Hebrew was proclaimed on 14 May 1948 (5 Iyar 5708) by David Ben-Gurion,the Executive Head of the World Zionist Organization,Chairman of the Jewish Agency for Palestine, and later first Prime Minister of Israel</p>
@@ -159,7 +159,7 @@
 
 <div class="card">
   <a href="./IsraelAttackOnPalestine/Attack1948.html">
-    <img src="../IsraelAttackOnPalestine/images/Bethlehem.jfif" alt="Clickable Image" class="clickable-image">
+    <img src="./IsraelAttackOnPalestine/images/Bethlehem.jfif" alt="Clickable Image" class="clickable-image">
     <h1>Palestine</h1>
 </a>
 <p>On 15 November 1988, Palestinian National Council, the legislative body of the Palestine Liberation Organization (PLO) led by Yasser Arafat, declared the establishment of the State</p>
@@ -168,7 +168,7 @@
 
 <div class="card">
   <a href="/Hammaz-&-israel-War/Hammaz-Attack-On-Israel.html">
-    <img src="../IsraelAttackOnPalestine/images/Hammaz.jpg" alt="Clickable Image" class="clickable-image">
+    <img src="./IsraelAttackOnPalestine/images/Hammaz.jpg" alt="Clickable Image" class="clickable-image">
     <h1>Hamas</h1>
   </a>
   <p>Hamas or Harakat al-Muqawama al-Islamiyya(Islamic Resistance Movement),is a Palestinian political and military organization.It was established in 1987,during the First Intifada,which was a Palestinian uprising against Israeli occupation</p>
