--- a/Palestine/Palestine.html
+++ b/Palestine/Palestine.html
@@ -185,28 +185,28 @@
   <div class="frame">
     <div class="image-container">
       <div class="image">
-        <img src="/images/Suez Crisis.webp" alt="Plate Icon">
+        <img src="../images/Suez Crisis.webp" alt="Plate Icon">
         <div class="count" id="count1">0</div>
         <h2>Population 1917</h2>
         
       </div>
       <div class="image">
-        <img src="./images/2020.webp" alt="Heart Icon">
+        <img src="../images/2020.webp" alt="Heart Icon">
         <div class="count" id="count2">0</div>
         <h2>Total Population 2020</h2>
       </div>
       <div class="image">
-        <img src="./images/myrtr.jfif" alt="Graduation Icon">
+        <img src="../images/myrtr.jfif" alt="Graduation Icon">
         <div class="count" id="count3">0</div>
         <h2>Martyr Palestinianes Ratio 2023</h2>
       </div>
       <div class="image">
-        <img src="./images/childss.jfif" alt="Medical Icon">
+        <img src="../images/childss.jfif" alt="Medical Icon">
         <div class="count" id="count4">0</div>
         <h2>childs Death Ratio 2023</h2>
       </div>
       <div class="image">
-        <img src="./images/alive1.jpg" alt="Medical Icon">
+        <img src="../images/alive1.jpg" alt="Medical Icon">
         <div class="count" id="count5">0</div>
         <h2>Alive People 2024</h2>
       </div>
@@ -511,16 +511,16 @@
               </span>
             </div>
             <div class="social-icons">
-              <a href="https://api.whatsapp.com/send?phone=923443237784&text=" target="_blank"><img src="/images/logo.png" alt="Whatsapp"></a>
+              <a href="https://api.whatsapp.com/send?phone=923443237784&text=" target="_blank"><img src="../images/logo.png" alt="Whatsapp"></a>
 
-                <a href="https://www.facebook.com/alirazanarejo.alirazanarejo/" target="_blank"><img src="/images/facebook.png" alt="Facebook"></a>
+                <a href="https://www.facebook.com/alirazanarejo.alirazanarejo/" target="_blank"><img src="../images/facebook.png" alt="Facebook"></a>
 
-                <a href="https://www.instagram.com/arn_stormbreaker/?hl=en" target="_blank"><img src="/images/instagram.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/arn_stormbreaker/?hl=en" target="_blank"><img src="../images/instagram.png" alt="Instagram"></a>
                 
-                <a href="https://www.twitter.com" target="_blank"><img src="/images/twitter.png" alt="Twitter"></a>
-                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" ><img src="/images/gmail.png" alt="gmail"></a>
-                <a href="https://www.linkedin.com" target="_blank"><img src="/images/linkedin.png" alt="LinkedIn"></a>
-                <a href="https://github.com/ALIRAZANAREJO" target="_blank"><img src="/images/github.png" alt="Github"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="../images/twitter.png" alt="Twitter"></a>
+                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" ><img src="../images/gmail.png" alt="gmail"></a>
+                <a href="https://www.linkedin.com" target="_blank"><img src="../images/linkedin.png" alt="LinkedIn"></a>
+                <a href="https://github.com/ALIRAZANAREJO" target="_blank"><img src="../images/github.png" alt="Github"></a>
             </div>
         </div>
         <div class="footer-bottom">
