--- a/Palestine/Palestine.html
+++ b/Palestine/Palestine.html
@@ -201,7 +201,7 @@
         <h2>Martyr Palestinianes Ratio 2023</h2>
       </div>
       <div class="image">
-        <img src="../images/childss.jfif" alt="Medical Icon">
+        <img src="../images/children's.jpg" alt="Medical Icon">
         <div class="count" id="count4">0</div>
         <h2>childs Death Ratio 2023</h2>
       </div>
@@ -502,7 +502,7 @@
       <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="/images/flag.jpg" alt="Logo">
+                <img src="../images/flag.jpg" alt="Logo">
                 <span class="footer-text">
                   <span class="pal">Pal</span>
                   <span class="es">es</span>
