--- a/Palestine/Palestine.html
+++ b/Palestine/Palestine.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palestine</title>
     <link rel="stylesheet" href="Palestine.css">
-    <link rel="stylesheet" href="./H2/H2.css">
+    <link rel="stylesheet" href="../H2/H2.css">
     <link rel="icon" type="image/png" href="../images/palestine_15363010.png">
 </head>
 <body>
@@ -538,8 +538,8 @@
         
 
 <script type="module" src="./Palestine.js"></script>
-<script type="module" src="./H2/H2.js"></script>
-<script type="module" src="./H2/H4.js"></script>
+<script type="module" src="../H2/H2.js"></script>
+<script type="module" src="../H2/H4.js"></script>
 </body>
 </html>
 
