--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile</title>
-  <link rel="stylesheet" href="/Profile/profile.css">
+  <link rel="stylesheet" href="./Profile/profile.css">
 </head>
 <body>
   <div class="container">
@@ -18,6 +18,6 @@
     </div>
     <button id="signOutBtn">Sign Out</button>
     </div>
-  <script type="module" src="/Profile/profile.js"></script>
+  <script type="module" src="./Profile/profile.js"></script>
 </body>
 </html>
