--- a/Israel/israel.html
+++ b/Israel/israel.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Israel</title>
-    <link rel="stylesheet" href="israel.css">
-    <link rel="stylesheet" href="/Navbar/navbar.css">
+    <link rel="stylesheet" href="./israel.css">
+    <link rel="stylesheet" href="../Navbar/navbar.css">
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo"><img src="/Israel/img/israel flag1.jfif" class="imeg"> 
+    <div class="logo"><img src="../Israel/img/israel flag1.jfif" class="imeg"> 
     </div>                    
     <div class="search-container"> 
       <input type="text" class="searchInput" id="searchInput" placeholder="Searching...">
       <button class="searchButton" id="searchButton">
-        <img class="Sicon" src="/images/search.png" alt="Search">
+        <img class="Sicon" src="../images/search.png" alt="Search">
       </button>
     </div>
     <ul class="nav-links">
-        <li><a href="/Israel/Israel-Army/Israel-Army.html">Home</a></li>
+        <li><a href="../Israel/Israel-Army/Israel-Army.html">Home</a></li>
         <li class="dropdown">
             <a href="">Services</a>
             <ul class="dropdown-content">
@@ -30,18 +30,18 @@
         <li class="dropdown">
           <a href="">Aboutus</a>
           <ul class="dropdown-content">
-        <li><a href="/Navbar/Aboutus/Website.html">Web</a></li>
-        <li><a href="/Navbar/Aboutus/Company.html">Company</a></li>
+        <li><a href="../Navbar/Aboutus/Website.html">Web</a></li>
+        <li><a href="../Navbar/Aboutus/Company.html">Company</a></li>
           </ul>
       </li>
      
-        <li><a href="/Navbar/Contact/Contact.html">Contact</a></li>
-        <li><a href="/Navbar/Donate/Donate.html">Donate</a></li>
+        <li><a href="../Navbar/Contact/Contact.html">Contact</a></li>
+        <li><a href="../Navbar/Donate/Donate.html">Donate</a></li>
     </ul>  
     <div class="profile">
       <div class="loading-circle"></div>
       <div class="profile-container">
-        <img class="profile-img" id="user-image" src="/images/profile.png" alt="Profile">
+        <img class="profile-img" id="user-image" src="../images/profile.png" alt="Profile">
         <div class="options">
           <div class="option" id="up">User Profile</div>
           <div class="option" data-url="https://www.google.com">Admin Profile</div>
@@ -64,20 +64,20 @@
 
 <main>
   <div class="image-frame">
-    <img src="/Israel/img/Cheif General Aluf Herzi Halevi OF israel2.jpg" alt="Image 1" class="circle-image small">
-    <img src="/Israel/img/ARMY.jpg" alt="Image 2" class="circle-image medium">
-    <img src="/Israel/img/Hammaz Army.webp" alt="Image 3" class="circle-image large">
-    <img src="/Israel/img/Herzi Halevi 2.png" alt="Image 4" class="circle-image xlarge">
+    <img src="../Israel/img/Cheif General Aluf Herzi Halevi OF israel2.jpg" alt="Image 1" class="circle-image small">
+    <img src="../Israel/img/ARMY.jpg" alt="Image 2" class="circle-image medium">
+    <img src="../Israel/img/Hammaz Army.webp" alt="Image 3" class="circle-image large">
+    <img src="../Israel/img/Herzi Halevi 2.png" alt="Image 4" class="circle-image xlarge">
   </div>
 </div>
 </div>  
 
  
       <div class="card-container">
-        <div> <img src="/Israel/img/israel.jpg" class="background-image"> </div>
+        <div> <img src="../Israel/img/israel.jpg" class="background-image"> </div>
         <div class="card">
           <a href="../Israel/History/History.html">
-            <img src="/Israel/img/SHPES.webp" alt="Clickable Image" class="clickable-image">
+            <img src="../Israel/img/SHPES.webp" alt="Clickable Image" class="clickable-image">
             <h3>History OF Israel</h3>
           </a>
            <p>The Balfour Declaration of 1917,issued by British Government,endorsed idea Jewish homeland in Palestine, World War II and the Holocaust, international pressure mounted for the establishment Jewish state in Palestine,leading to the creation of Israel in 1948</p>
@@ -87,7 +87,7 @@
 
    
         <div class="card">
-          <a href="Dream-of-israel/Dream-of-israel.html">
+          <a href="../Israel/Dream-of-israel/Dream-of-israel.html">
             <img src="/Israel/img/third temple.jpg" alt="Clickable Image" class="clickable-image">
             <h3>Third Temple OF Israel</h3>
           </a>
@@ -96,7 +96,7 @@
 
         
     <div class="card">
-      <a href="/Israel/Israel-Army/Israel-Army.html">
+      <a href="../Israel/Israel-Army/Israel-Army.html">
         <img src="/Israel/img/army of is.jfif" alt="Clickable Image" class="clickable-image">
         <h3>Israel Army</h3>
       </a>
@@ -107,8 +107,8 @@
 
 </div>
 </main>
-<script type="module" src="/Navbar/navbar.js"></script>                  
-<script type="module" src="israel.js"></script>
+<script type="module" src="../Navbar/navbar.js"></script>                  
+<script type="module" src="./israel.js"></script>
 </body>
 </html>
 
