--- a/Palestine/Palestine.html
+++ b/Palestine/Palestine.html
@@ -149,8 +149,8 @@
   <div class="card-container">
 <div class="background-image"></div>
 <div class="card">
-  <a href="../Israel/israel.html">
-    <img src="../Israel/img/israel.jpg" alt="Clickable Image" class="clickable-image">
+  <a href="./Israel/israel.html">
+    <img src="./Israel/img/israel.jpg" alt="Clickable Image" class="clickable-image">
     <h1>Israel</h1>
 </a>
 <p>The Israeli Declaration Establishment of the State of Israel Hebrew was proclaimed on 14 May 1948 (5 Iyar 5708) by David Ben-Gurion,the Executive Head of the World Zionist Organization,Chairman of the Jewish Agency for Palestine, and later first Prime Minister of Israel</p>
