--- a/Israel/Israel-Army/Militry/Militory.html
+++ b/Israel/Israel-Army/Militry/Militory.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Military</title> 
     <link rel="stylesheet" href="./Militory.css">
-    <link rel="stylesheet" href="../Navbar/navbar.html">
+    <link rel="stylesheet" href="../Navbar/navbar.css">
 </head>
 <body>
     <nav class="navbar">
