--- a/Israel/Dream-of-israel/Dream-of-israel.html
+++ b/Israel/Dream-of-israel/Dream-of-israel.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dream-OF-israel</title>
-    <link rel="stylesheet" href="Dream-of-israel.css">
-    <link rel="stylesheet" href="/Navbar/navbar.css">
+    <link rel="stylesheet" href="./Dream-of-israel.css">
+    <link rel="stylesheet" href="../Navbar/navbar.css">
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo"><img src="/Israel/img/israel flag1.jfif" class="imeg"> 
+        <div class="logo"><img src="../img/israel flag1.jfif" class="imeg"> 
         </div>                    
         <div class="search-container"> 
           <input type="text" class="searchInput" id="searchInput" placeholder="Searching...">
           <button class="searchButton" id="searchButton">
-            <img class="Sicon" src="/images/search.png" alt="Search">
+            <img class="Sicon" src="../img/search.png" alt="Search">
           </button>
         </div>
         <ul class="nav-links">
@@ -30,13 +30,13 @@
             <li class="dropdown">
               <a href="">Aboutus</a>
               <ul class="dropdown-content">
-            <li><a href="/Navbar/Aboutus/Website.html">Web</a></li>
-            <li><a href="/Navbar/Aboutus/Company.html">Company</a></li>
+            <li><a href="../Navbar/Aboutus/Website.html">Web</a></li>
+            <li><a href="../Navbar/Aboutus/Company.html">Company</a></li>
               </ul>
           </li>
          
-            <li><a href="/Navbar/Contact/Contact.html">Contact</a></li>
-            <li><a href="/Navbar/Donate/Donate.html">Donate</a></li>
+            <li><a href="../Navbar/Contact/Contact.html">Contact</a></li>
+            <li><a href="../Navbar/Donate/Donate.html">Donate</a></li>
         </ul>  
         <div class="profile">
           <div class="loading-circle"></div>
@@ -173,8 +173,8 @@
         
 
 </main>
-<script type="module" src="/Navbar/navbar.js"></script>                 
-    <script type="module" src="Dream-of-israel.js"></script>
+<script type="module" src="../Navbar/navbar.js"></script>                 
+    <script type="module" src="./Dream-of-israel.js"></script>
 </body>
 </html>
 
