--- a/Israel/Israel-Army/Militry/Militory.html
+++ b/Israel/Israel-Army/Militry/Militory.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo"><img src="" class="imeg"> 
+        <div class="logo"><img src="../img/army of israel3.jpg" class="imeg"> 
         </div>                    
         <div class="search-container"> 
           <input type="text" class="searchInput" id="searchInput" placeholder="Searching...">
