--- a/Israel/Israel-Army/Militry/Militory.html
+++ b/Israel/Israel-Army/Militry/Militory.html
@@ -14,7 +14,7 @@
         <div class="search-container"> 
           <input type="text" class="searchInput" id="searchInput" placeholder="Searching...">
           <button class="searchButton" id="searchButton">
-            <img class="Sicon" src="../images/search.png" alt="Search">
+            <img class="Sicon" src="../img/search.png" alt="Search">
           </button>
         </div>
         <ul class="nav-links">
