--- a/IsraelAttackOnPalestine/PC/PC.html
+++ b/IsraelAttackOnPalestine/PC/PC.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Famouse Places of Palestine</title>
     <link rel="stylesheet" href="PC.css">
-    <link rel="stylesheet" href="/Navbar/navbar.css">
+    <link rel="stylesheet" href="./Navbar/navbar.css">
   </head>
   <body>
     <nav class="navbar">
