--- a/IsraelAttackOnPalestine/History-of-palestine/History.html
+++ b/IsraelAttackOnPalestine/History-of-palestine/History.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>History of Palestine</title>
-    <link rel="stylesheet" href="History.css">
-    <link rel="stylesheet" href="/Navbar/navbar.css">
+    <link rel="stylesheet" href="./History.css">
+    <link rel="stylesheet" href="../../Navbar/navbar.css">
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo"><img src="/images/flag.jpg" class="imeg"> 
+    <div class="logo"><img src="../../images/flag.jpg" class="imeg"> 
     </div>                    
     <div class="search-container"> 
       <input type="text" class="searchInput" id="searchInput" placeholder="Searching...">
       <button class="searchButton" id="searchButton">
-        <img class="Sicon" src="/images/search.png" alt="Search">
+        <img class="Sicon" src="../../images/search.png" alt="Search">
       </button>
     </div>
     <ul class="nav-links">
-        <li><a href="Palestine.html">Home</a></li>
+        <li><a href="../../Palestine/Palestine.html">Home</a></li>
         <li class="dropdown">
             <a href="">Services</a>
             <ul class="dropdown-content">
@@ -30,13 +30,13 @@
         <li class="dropdown">
           <a href="">Aboutus</a>
           <ul class="dropdown-content">
-        <li><a href="/Navbar/Aboutus/Website.html">Web</a></li>
-        <li><a href="/Navbar/Aboutus/Company.html">Company</a></li>
+        <li><a href="../../Navbar/Aboutus/Website.html">Web</a></li>
+        <li><a href="../../Navbar/Aboutus/Company.html">Company</a></li>
           </ul>
       </li>
      
-        <li><a href="/Navbar/Contact/Contact.html">Contact</a></li>
-        <li><a href="/Navbar/Donate/Donate.html">Donate</a></li>
+        <li><a href="../../Navbar/Contact/Contact.html">Contact</a></li>
+        <li><a href="../../Navbar/Donate/Donate.html">Donate</a></li>
     </ul>  
     <div class="profile">
       <div class="loading-circle"></div>
@@ -61,27 +61,27 @@
 
 
     <main>
-      <div> <img src="/images/palestine 1.jpg" class="background-image"> </div>
+      <div> <img src="../../images/palestine 1.jpg" class="background-image"> </div>
       <div class="card-container">
         <div class="card">
-          <a href="Established/Established.html">
-            <img src="/images/Palestine.jpg" alt="Clickable Image" class="clickable-image">
+          <a href="./Established/Established.html">
+            <img src="../../images/Palestine.jpg" alt="Clickable Image" class="clickable-image">
             <h3>Palestine History</h3>
           </a>
             <p>In 1988 the Palestine National Council meeting in Algiers proclaimed the establishment of the State of Palestine.</p> 
     </div>
 
       <div class="card">
-        <a href="/Israel/History/History.html">
-          <img src="/Israel/img/SHPES.webp" alt="Clickable Image" class="clickable-image">
+        <a href="../../Israel/History/History.html">
+          <img src="../../Israel/img/SHPES.webp" alt="Clickable Image" class="clickable-image">
           <h3>israel History</h3>
         </a>
          <p>The Balfour Declaration of 1917,issued by British Government,endorsed idea Jewish homeland in Palestine, World War II and the Holocaust, international pressure mounted for the establishment Jewish state in Palestine,leading to the creation of Israel in 1948</p>
   </div>
   
     <div class="card">
-      <a href="Y-Make-Israel/Make-Isreal.html">
-        <img src="/images/israel.webp" alt="Clickable Image" class="clickable-image">
+      <a href="./Y-Make-Israel/Make-Isreal.html">
+        <img src="../../images/israel.webp" alt="Clickable Image" class="clickable-image">
         <h3>Yahodies Make Israel</h3>
       </a>
         <p>On May 14, 1948, David Ben-Gurion, the head of the Jewish Agency, proclaimed the establishment of the State of Israel. U.S. President Harry S. Truman recognized the new nation on the same day.</p>
@@ -90,8 +90,8 @@
 
 
 </main>                  
-<script type="module" src="/Navbar/navbar.js"></script>
-<script type="module" src="History.js"></script>
+<script type="module" src="../../Navbar/navbar.js"></script>
+<script type="module" src="./History.js"></script>
 </body>
 </html>
 
