--- a/IsraelAttackOnPalestine/PC/Cities/Beit-Jala/Beit-Jala.html
+++ b/IsraelAttackOnPalestine/PC/Cities/Beit-Jala/Beit-Jala.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bethlehem</title>
-    <link rel="stylesheet" href="Beit-Jala.css">
+    <link rel="stylesheet" href="./Beit-Jala.css">
 </head>
 <body>
         <!-- header -->
     <header>
         <div class="logo">Bethlehem</div>
         <ul class="menu">
-            <li><a href="/Palestine.html">Home</a></li>
-            <li><a href="/Navbar/Aboutus/Company.html">About</a></li>
-            <li><a href="/Navbar/Contact/Contact.html">Contact</a></li>
+            <li><a href="../../../../Palestine/Palestine.html">Home</a></li>
+            <li><a href="../../../../Navbar/Aboutus/Company.html">About</a></li>
+            <li><a href="../../../../Navbar/Contact/Contact.html">Contact</a></li>
        
         </ul>
         <div class="search">
@@ -75,7 +75,7 @@
         </div>
         <!-- thumbnail -->
       
-    <script src="Beit-jala.js"></script>
+    <script src="./Beit-jala.js"></script>
 </body>
 </html>
 
