--- a/IsraelAttackOnPalestine/PC/Cities/Beit-Sahour/Beit-Sahour.html
+++ b/IsraelAttackOnPalestine/PC/Cities/Beit-Sahour/Beit-Sahour.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bethlehem</title>
-    <link rel="stylesheet" href="Beit-Sahour.css">
+    <link rel="stylesheet" href="./Beit-Sahour.css">
 </head>
 <body>
         <!-- header -->
     <header>
         <div class="logo">Bethlehem</div>
         <ul class="menu">
-            <li><a href="/Palestine.html">Home</a></li>
+            <li><a href="../../PC.html">Home</a></li>
             <li><a href=".html">About</a></li>
             <li><a href=".html">Contact</a></li>
        
@@ -76,7 +76,7 @@
         </div>
         <!-- thumbnail -->
       
-    <script src="/IsraelAttackOnPalestine/Hammaz-&-israel-War/Hammaz-Attack-On-Israel.html"></script>
+   <script type="module" src="./Beit-Sahour.js"></script>
 </body>
 </html>
 
