--- a/IsraelAttackOnPalestine/PC/Cities/Jenin/Jenin.html
+++ b/IsraelAttackOnPalestine/PC/Cities/Jenin/Jenin.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo">Jenin</div>
         <ul class="menu">
-            <li><a href="/Palestine.html">Home</a></li>
+            <li><a href="../../PC.html">Home</a></li>
             <li><a href=".html">About</a></li>
             <li><a href=".html">Contact</a></li>
        
@@ -102,7 +102,7 @@
                 </div>
                 <!-- thumbnail -->
                 
-                <script src="Jenin.js"></script>
+                <script src="./Jenin.js"></script>
                 </body>
                 </html>
                 </html>
