--- a/IsraelAttackOnPalestine/PC/Cities/Jericho/Jericho.html
+++ b/IsraelAttackOnPalestine/PC/Cities/Jericho/Jericho.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jericho</title>
-    <link rel="stylesheet" href="Jericho.css">
+    <link rel="stylesheet" href="./Jericho.css">
 </head>
 <body>
         <!-- header -->
     <header>
         <div class="logo">Jericho</div>
         <ul class="menu">
-            <li><a href="/Palestine/Palestine.html">Home</a></li>
+            <li><a href="../../PC.html">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Contact</a></li>
        
@@ -197,7 +197,7 @@
                 </div>
                 <!-- thumbnail -->
                 
-                <script src="Jericho.js"></script>
+                <script src="./Jericho.js"></script>
                 </body>
                 </html>
 
