--- a/IsraelAttackOnPalestine/PC/Cities/Jerusalem/Jerusalem.html
+++ b/IsraelAttackOnPalestine/PC/Cities/Jerusalem/Jerusalem.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Jerusalem.css">
+    <link rel="stylesheet" href="./Jerusalem.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="">Home</a>
+            <a href="../../PC.html">Home</a>
             <a href="">Contacts</a>
             <a href="">Info</a>
         </nav>
@@ -489,7 +489,7 @@
     <div class="time"></div>
 </div>
 
-<script src="Jerusalem.js"></script>
+<script src="./Jerusalem.js"></script>
 </body>
 </html>
 
