--- a/IsraelAttackOnPalestine/PC/Cities/QVH.html
+++ b/IsraelAttackOnPalestine/PC/Cities/QVH.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quranic Verses & Hadiths</title>
-    <link rel="stylesheet" href="QVH.css">
+    <link rel="stylesheet" href="./QVH.css">
 </head>
 <body>
     <h1>Quranic Verses:</h1>
