--- a/IsraelAttackOnPalestine/PC/Cities/Ramallah-&-El-Bireh/Ramallah-&-El-Bireh.html
+++ b/IsraelAttackOnPalestine/PC/Cities/Ramallah-&-El-Bireh/Ramallah-&-El-Bireh.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramallah-&-El-Bireh</title>
-    <link rel="stylesheet" href="Ramallah-&-El-Bireh.css">
+    <link rel="stylesheet" href="./Ramallah-&-El-Bireh.css">
 </head>
 <body>
         <!-- header -->
     <header>
         <div class="logo"></div>
         <ul class="menu">
-            <li><a href="/Palestine.html">Home</a></li>
+            <li><a href="../../PC.html">Home</a></li>
             <li><a href=".html">About</a></li>
             <li><a href=".html">Contact</a></li>
        
@@ -203,7 +203,7 @@
         </div>
         <!-- thumbnail -->
       
-    <script src="Ramallah-&-El-Bireh.js"></script>
+    <script src="./Ramallah-&-El-Bireh.js"></script>
 </body>
 </html>
 
