--- a/Hammaz-&-israel-War/Hamas-Army/Hamas-Army.html
+++ b/Hammaz-&-israel-War/Hamas-Army/Hamas-Army.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>National Counterterrorism Center | FTOs</title>
     <link rel="stylesheet" href="./Hamas-Army .css">
-    <link rel="stylesheet" href="../Navbar/navbar.css">
+    <link rel="stylesheet" href="../../Navbar/navbar.css">
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo"><img src="./Hammaz-&-israel-War/img/flag.png" class="imeg"> 
+    <div class="logo"><img src="../img/flag.png" class="imeg"> 
     </div>                    
     <div class="search-container"> 
       <input type="text" class="searchInput" id="searchInput" placeholder="Searching...">
@@ -18,7 +18,7 @@
       </button>
     </div>
     <ul class="nav-links">
-        <li><a href="Palestine.html">Home</a></li>
+        <li><a href="../../Palestine/Palestine.html">Home</a></li>
         <li class="dropdown">
             <a href="">Services</a>
             <ul class="dropdown-content">
@@ -30,13 +30,13 @@
         <li class="dropdown">
           <a href="">Aboutus</a>
           <ul class="dropdown-content">
-        <li><a href="../Navbar/Aboutus/Website.html">Web</a></li>
-        <li><a href="../Navbar/Aboutus/Company.html">Company</a></li>
+        <li><a href="../../Navbar/Aboutus/Website.html">Web</a></li>
+        <li><a href="../../Navbar/Aboutus/Company.html">Company</a></li>
           </ul>
       </li>
      
-        <li><a href="../Navbar/Contact/Contact.html">Contact</a></li>
-        <li><a href="../Navbar/Donate/Donate.html">Donate</a></li>
+        <li><a href="../../Navbar/Contact/Contact.html">Contact</a></li>
+        <li><a href="../../Navbar/Donate/Donate.html">Donate</a></li>
     </ul>  
     <div class="profile">
       <div class="loading-circle"></div>
@@ -161,7 +161,7 @@
 
                                      
     </main>
-    <script type="module" src="../Navbar/navbar.js"></script>
+    <script type="module" src="../../Navbar/navbar.js"></script>
       <script type="module" src="./Hamas-Army .js"></script>
     </body>
     </html>
