--- a/Hammaz-&-israel-War/Hamas/Hamas.html
+++ b/Hammaz-&-israel-War/Hamas/Hamas.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamas</title>
     <link rel="stylesheet" href="./Hamas.css">
-    <link rel="stylesheet" href="../Navbar/navbar.css">
+    <link rel="stylesheet" href="../../Navbar/navbar.css">
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo"><img src="./Hammaz-&-israel-War/img/flag.png" class="imeg"> 
+        <div class="logo"><img src="../img/flag.png" class="imeg"> 
         </div>                    
         <div class="search-container"> 
           <input type="text" class="searchInput" id="searchInput" placeholder="Searching...">
           <button class="searchButton" id="searchButton">
-            <img class="Sicon" src="../images/search.png" alt="Search">
+            <img class="Sicon" src="../../images/search.png" alt="Search">
           </button>
         </div>
         <ul class="nav-links">
-            <li><a href="Palestine.html">Home</a></li>
+            <li><a href="../../Palestine/Palestine.html">Home</a></li>
             <li class="dropdown">
                 <a href="">Services</a>
                 <ul class="dropdown-content">
@@ -30,13 +30,13 @@
             <li class="dropdown">
               <a href="">Aboutus</a>
               <ul class="dropdown-content">
-            <li><a href="../Navbar/Aboutus/Website.html">Web</a></li>
-            <li><a href="../Navbar/Aboutus/Company.html">Company</a></li>
+            <li><a href="../../Navbar/Aboutus/Website.html">Web</a></li>
+            <li><a href="../../Navbar/Aboutus/Company.html">Company</a></li>
               </ul>
           </li>
          
-            <li><a href="../Navbar/Contact/Contact.html">Contact</a></li>
-            <li><a href="../Navbar/Donate/Donate.html">Donate</a></li>
+            <li><a href="../../Navbar/Contact/Contact.html">Contact</a></li>
+            <li><a href="../../Navbar/Donate/Donate.html">Donate</a></li>
         </ul>  
         <div class="profile">
           <div class="loading-circle"></div>
@@ -105,7 +105,7 @@
 
 </div>
 </main>                  
-    <script type="module" src="../Navbar/navbar.js"></script>
+    <script type="module" src="../../Navbar/navbar.js"></script>
     <script type="module" src="./Hamas.js"></script>
 </body>
 </html>
