--- a/Israel/Dream-of-israel/Dream-of-israel.html
+++ b/Israel/Dream-of-israel/Dream-of-israel.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dream-OF-israel</title>
     <link rel="stylesheet" href="./Dream-of-israel.css">
-    <link rel="stylesheet" href="../Navbar/navbar.css">
+    <link rel="stylesheet" href="../../Navbar/navbar.css">
 </head>
 <body>
     <nav class="navbar">
@@ -18,7 +18,7 @@
           </button>
         </div>
         <ul class="nav-links">
-            <li><a href="Palestine.html">Home</a></li>
+            <li><a href="../../Palestine/Palestine.html">Home</a></li>
             <li class="dropdown">
                 <a href="">Services</a>
                 <ul class="dropdown-content">
@@ -30,13 +30,13 @@
             <li class="dropdown">
               <a href="">Aboutus</a>
               <ul class="dropdown-content">
-            <li><a href="../Navbar/Aboutus/Website.html">Web</a></li>
-            <li><a href="../Navbar/Aboutus/Company.html">Company</a></li>
+            <li><a href="../../Navbar/Aboutus/Website.html">Web</a></li>
+            <li><a href="../../Navbar/Aboutus/Company.html">Company</a></li>
               </ul>
           </li>
          
-            <li><a href="../Navbar/Contact/Contact.html">Contact</a></li>
-            <li><a href="../Navbar/Donate/Donate.html">Donate</a></li>
+            <li><a href="../../Navbar/Contact/Contact.html">Contact</a></li>
+            <li><a href="../../Navbar/Donate/Donate.html">Donate</a></li>
         </ul>  
         <div class="profile">
           <div class="loading-circle"></div>
@@ -173,7 +173,7 @@
         
 
 </main>
-<script type="module" src="../Navbar/navbar.js"></script>                 
+<script type="module" src="../../Navbar/navbar.js"></script>                 
     <script type="module" src="./Dream-of-israel.js"></script>
 </body>
 </html>
