--- a/Israel/Israel-Army/Fighterjets/Fighterjet.html
+++ b/Israel/Israel-Army/Fighterjets/Fighterjet.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fighterjet</title> 
     <link rel="stylesheet" href="./Fighterjet.css">
-    <link rel="stylesheet" href="../Navbar/navbar.css">
+    <link rel="stylesheet" href="../../../Navbar/navbar.css">
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo"><img src="../img/5th Gen.jpg" class="imeg"> 
+        <div class="logo"><img src="../img/J1.jpg" class="imeg"> 
         </div>                    
         <div class="search-container"> 
           <input type="text" class="searchInput" id="searchInput" placeholder="Searching...">
           <button class="searchButton" id="searchButton">
-            <img class="Sicon" src="../images/search.png" alt="Search">
+            <img class="Sicon" src="../../img/search.png" alt="Search">
           </button>
         </div>
         <ul class="nav-links">
-            <li><a href="Palestine.html">Home</a></li>
+            <li><a href="../../../Palestine/Palestine.html">Home</a></li>
             <li class="dropdown">
                 <a href="">Services</a>
                 <ul class="dropdown-content">
@@ -30,13 +30,13 @@
             <li class="dropdown">
               <a href="">Aboutus</a>
               <ul class="dropdown-content">
-            <li><a href="../Navbar/Aboutus/Website.html">Web</a></li>
-            <li><a href="../Navbar/Aboutus/Company.html">Company</a></li>
+            <li><a href="../../../Navbar/Aboutus/Website.html">Web</a></li>
+            <li><a href="../../../Navbar/Aboutus/Company.html">Company</a></li>
               </ul>
           </li>
          
-            <li><a href="../Navbar/Contact/Contact.html">Contact</a></li>
-            <li><a href="../Navbar/Donate/Donate.html">Donate</a></li>
+            <li><a href="../../../Navbar/Contact/Contact.html">Contact</a></li>
+            <li><a href="../../../Navbar/Donate/Donate.html">Donate</a></li>
         </ul>  
         <div class="profile">
           <div class="loading-circle"></div>
@@ -155,7 +155,7 @@
 </div>
 </main>   
 
-<script type="module" src="../Navbar/navbar.js"></script>
+<script type="module" src="../../../Navbar/navbar.js"></script>
 <script  src="./Fighterjet.js"></script>
 </body>
 </html>
