--- a/Israel/Israel-Army/Israel-Army.html
+++ b/Israel/Israel-Army/Israel-Army.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Israel use Weapons to Destroy Palestine</title>
     <link rel="stylesheet" href="./Israel Army .css">
-    <link rel="stylesheet" href="../Navbar/navbar.css">
+    <link rel="stylesheet" href="../../Navbar/navbar.css">
 </head>
 <body>
   <nav class="navbar">
@@ -18,7 +18,7 @@
       </button>
     </div>
     <ul class="nav-links">
-        <li><a href="Palestine.html">Home</a></li>
+        <li><a href="../../Palestine/Palestine.html">Home</a></li>
         <li class="dropdown">
             <a href="">Services</a>
             <ul class="dropdown-content">
@@ -30,13 +30,13 @@
         <li class="dropdown">
           <a href="">Aboutus</a>
           <ul class="dropdown-content">
-        <li><a href="../Navbar/Aboutus/Website.html">Web</a></li>
-        <li><a href="../Navbar/Aboutus/Company.html">Company</a></li>
+        <li><a href="../../Navbar/Aboutus/Website.html">Web</a></li>
+        <li><a href="../../Navbar/Aboutus/Company.html">Company</a></li>
           </ul>
       </li>
      
-        <li><a href="../Navbar/Contact/Contact.html">Contact</a></li>
-        <li><a href="../Navbar/Donate/Donate.html">Donate</a></li>
+        <li><a href="../../Navbar/Contact/Contact.html">Contact</a></li>
+        <li><a href="../../Navbar/Donate/Donate.html">Donate</a></li>
     </ul>  
     <div class="profile">
       <div class="loading-circle"></div>
@@ -109,7 +109,7 @@
         <p>unmanned aerial vehicle (UAV) military aircraft electronic transmitters designed interfere destroy enemy targets.
          </p>
       </div>
-      <script type="module" src="../Navbar/navbar.js"></script>                
+      <script type="module" src="../../Navbar/navbar.js"></script>                
     <script src="./Israel Army .js"></script>
 </body>
 </html>
