--- a/Israel/israel.html
+++ b/Israel/israel.html
@@ -18,7 +18,7 @@
       </button>
     </div>
     <ul class="nav-links">
-        <li><a href="../Israel/Israel-Army/Israel-Army.html">Home</a></li>
+        <li><a href="../Palestine/Palestine.html">Home</a></li>
         <li class="dropdown">
             <a href="">Services</a>
             <ul class="dropdown-content">
