--- a/IsraelAttackOnPalestine/History-of-palestine/Established/Established.html
+++ b/IsraelAttackOnPalestine/History-of-palestine/Established/Established.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Establishment of Palestine</title>
-    <link rel="stylesheet" href="Established.css">
-    <link rel="stylesheet" href="/Navbar/navbar.css">
+    <link rel="stylesheet" href="./Established.css">
+    <link rel="stylesheet" href="../../../Navbar/navbar.css">
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo"><img src="/images/flag.jpg" class="imeg"> 
+        <div class="logo"><img src="../../images/flag.jpg" class="imeg"> 
         </div>                    
         <div class="search-container"> 
           <input type="text" class="searchInput" id="searchInput" placeholder="Searching...">
           <button class="searchButton" id="searchButton">
-            <img class="Sicon" src="/images/search.png" alt="Search">
+            <img class="Sicon" src="../../../images/search.png" alt="Search">
           </button>
         </div>
         <ul class="nav-links">
-            <li><a href="Palestine.html">Home</a></li>
+            <li><a href="../../../Palestine/Palestine.html">Home</a></li>
             <li class="dropdown">
                 <a href="">Services</a>
                 <ul class="dropdown-content">
@@ -30,13 +30,13 @@
             <li class="dropdown">
               <a href="">Aboutus</a>
               <ul class="dropdown-content">
-            <li><a href="/Navbar/Aboutus/Website.html">Web</a></li>
-            <li><a href="/Navbar/Aboutus/Company.html">Company</a></li>
+            <li><a href="../../../Navbar/Aboutus/Website.html">Web</a></li>
+            <li><a href="../../../Navbar/Aboutus/Company.html">Company</a></li>
               </ul>
           </li>
          
-            <li><a href="/Navbar/Contact/Contact.html">Contact</a></li>
-            <li><a href="/Navbar/Donate/Donate.html">Donate</a></li>
+            <li><a href="../../../Navbar/Contact/Contact.html">Contact</a></li>
+            <li><a href="../../../Navbar/Donate/Donate.html">Donate</a></li>
         </ul>  
         <div class="profile">
           <div class="loading-circle"></div>
@@ -147,8 +147,8 @@
     <p>Today, Palestine stands at a critical juncture. The Israeli-Palestinian conflict remains unresolved, marked by geopolitical complexities and differing narratives. The international community continues to seek a just and sustainable resolution.</p>
     <!-- Add more content here -->
 
-   <script type="module" src="/Navbar/navbar.js"></script>
-   <script type="module" src="Established.js"></script>
+   <script type="module" src="../../../Navbar/navbar.js"></script>
+   <script type="module" src="./Established.js"></script>
 </body>
 </html>
 
