--- a/IsraelAttackOnPalestine/History-of-palestine/Y-Make-Israel/Make-Isreal.html
+++ b/IsraelAttackOnPalestine/History-of-palestine/Y-Make-Israel/Make-Isreal.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Israel</title>
-    <link rel="stylesheet" href="Make-Isreal.css">
-    <link rel="stylesheet" href="/Navbar/navbar.css">
+    <link rel="stylesheet" href="./Make-Isreal.css">
+    <link rel="stylesheet" href="../../../Navbar/navbar.css">
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo"><img src="/images/flag.jpg" class="imeg"> 
+    <div class="logo"><img src="../../../images/flag.jpg" class="imeg"> 
     </div>                    
     <div class="search-container"> 
       <input type="text" class="searchInput" id="searchInput" placeholder="Searching...">
       <button class="searchButton" id="searchButton">
-        <img class="Sicon" src="/images/search.png" alt="Search">
+        <img class="Sicon" src="../../../images/search.png" alt="Search">
       </button>
     </div>
     <ul class="nav-links">
-        <li><a href="Palestine.html">Home</a></li>
+        <li><a href="../../../Palestine/Palestine.html">Home</a></li>
         <li class="dropdown">
             <a href="">Services</a>
             <ul class="dropdown-content">
@@ -30,13 +30,13 @@
         <li class="dropdown">
           <a href="">Aboutus</a>
           <ul class="dropdown-content">
-        <li><a href="/Navbar/Aboutus/Website.html">Web</a></li>
-        <li><a href="/Navbar/Aboutus/Company.html">Company</a></li>
+        <li><a href="../../../Navbar/Aboutus/Website.html">Web</a></li>
+        <li><a href="../../../Navbar/Aboutus/Company.html">Company</a></li>
           </ul>
       </li>
      
-        <li><a href="/Navbar/Contact/Contact.html">Contact</a></li>
-        <li><a href="/Navbar/Donate/Donate.html">Donate</a></li>
+        <li><a href="../../../Navbar/Contact/Contact.html">Contact</a></li>
+        <li><a href="../../../Navbar/Donate/Donate.html">Donate</a></li>
     </ul>  
     <div class="profile">
       <div class="loading-circle"></div>
@@ -65,7 +65,7 @@
       <div class="card-container">
         <div class="card">
           <img src="israel.jfif">
-          <h3><a href="Israel.html/Israel-Army.html">Israel</a></h3>
+          <h3><a href="../../../Israel/israel.html">Israel</a></h3>
            <p> Israel, Arabic Isrāʾīl, officially State of Israel or Hebrew Medinat Yisraʾel, country in the Middle East, located at the eastern end of the Mediterranean Sea </p>
             <!-- <div class="icons"> -->
             <!-- <div class="like-icon" onclick="handleLike()">
@@ -117,8 +117,8 @@
 
 </div>
 </main>                  
-<script type="module" src="/Navbar/navbar.js"></script>
-<script type="module" src="Make-Isreal.js"></script>
+<script type="module" src="../../../Navbar/navbar.js"></script>
+<script type="module" src="./Make-Isreal.js"></script>
 </body>
 </html>
 
