--- a/IsraelAttackOnPalestine/PC/Cities/Bethlehem/Bethlehem.html
+++ b/IsraelAttackOnPalestine/PC/Cities/Bethlehem/Bethlehem.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bethlehem</title>
-    <link rel="stylesheet" href="Bethlehem.css">
+    <link rel="stylesheet" href="./Bethlehem.css">
 </head>
 <body>
         <!-- header -->
     <header>
         <div class="logo">Bethlehem</div>
         <ul class="menu">
-            <li><a href="/Palestine.html">Home</a></li>
+            <li><a href="../../PC.html">Home</a></li>
             <li><a href=".html">About</a></li>
             <li><a href=".html">Contact</a></li>
        
@@ -167,6 +167,6 @@
     </div>
 
 
-    <script src="Bethlehem.js"></script>
+    <script src="./Bethlehem.js"></script>
 </body>
 </html>
