--- a/IsraelAttackOnPalestine/PC/Cities/Hebron/Hebron.html
+++ b/IsraelAttackOnPalestine/PC/Cities/Hebron/Hebron.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hebron</title>
-    <link rel="stylesheet" href="Hebron.css">
+    <link rel="stylesheet" href="./Hebron.css">
 </head>
 <body>
         <!-- header -->
     <header>
         <div class="logo">Bethlehem</div>
         <ul class="menu">
-            <li><a href="/Palestine.html">Home</a></li>
+            <li><a href="../../PC.html">Home</a></li>
             <li><a href=".html">About</a></li>
             <li><a href=".html">Contact</a></li>
        
@@ -64,7 +64,7 @@
         </div>
         <!-- thumbnail -->
       
-    <script src="Hebron.js"></script>
+    <script src="./Hebron.js"></script>
 </body>
 </html>
 
