--- a/IsraelAttackOnPalestine/PC/Cities/Khan-Younis/Khan-Younis.html
+++ b/IsraelAttackOnPalestine/PC/Cities/Khan-Younis/Khan-Younis.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>khan Younis</title>
-    <link rel="stylesheet" href="Khan-Younis.css">
+    <link rel="stylesheet" href="./Khan-Younis.css">
 </head>
 <body>
         <!-- header -->
     <header>
         <div class="logo">Jenin</div>
         <ul class="menu">
-            <li><a href="/Palestine.html">Home</a></li>
+            <li><a href="../../PC.html">Home</a></li>
             <li><a href=".html">About</a></li>
             <li><a href=".html">Contact</a></li>
        
@@ -49,7 +49,7 @@
         </div>
         <!-- thumbnail -->
       
-    <script src="Khan-Younis.js"></script>
+    <script src="./Khan-Younis.js"></script>
 </body>
 </html>
 
