--- a/IsraelAttackOnPalestine/PC/Cities/Nablus/Nablus.html
+++ b/IsraelAttackOnPalestine/PC/Cities/Nablus/Nablus.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nablus</title>
-    <link rel="stylesheet" href="Nablus.css">
+    <link rel="stylesheet" href="./Nablus.css">
 </head>
 <body>
         <!-- header -->
     <header>
         <div class="logo">Nablus</div>
         <ul class="menu">
-            <li><a href="/Palestine.html">Home</a></li>
+            <li><a href="../../PC.html">Home</a></li>
             <li><a href=".html">About</a></li>
             <li><a href=".html">Contact</a></li>
        
@@ -115,7 +115,7 @@
 </div>
 <!-- thumbnail -->
 
-<script src="Nablus.js"></script>
+<script src="./Nablus.js"></script>
 </body>
 </html>
 </html>
