--- a/IsraelAttackOnPalestine/PC/Cities/Tulkarem/Tulkarem.html
+++ b/IsraelAttackOnPalestine/PC/Cities/Tulkarem/Tulkarem.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tulkarem</title>
-    <link rel="stylesheet" href="Tulkarem.css">
+    <link rel="stylesheet" href="./Tulkarem.css">
 </head>
 <body>
         <!-- header -->
     <header>
         <div class="logo"></div>
         <ul class="menu">
-            <li><a href="/Palestine.html">Home</a></li>
+            <li><a href="../../PC.html">Home</a></li>
             <li><a href=".html">About</a></li>
             <li><a href=".html">Contact</a></li>
         </ul>
@@ -104,7 +104,7 @@
                 </div>
                 <!-- thumbnail -->
                 
-                <script src="Tulkarem.js"></script>
+                <script src="./Tulkarem.js"></script>
                 </body>
                 </html>
                 </html>
