--- a/IsraelAttackOnPalestine/israel-Attack-om-Palestine/Hammas-VS-israel/Hammas-VS-israel.html
+++ b/IsraelAttackOnPalestine/israel-Attack-om-Palestine/Hammas-VS-israel/Hammas-VS-israel.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hammas-VS-israel</title>
-    <link rel="stylesheet" href="Hammas-VS-israel.css">
-    <link rel="stylesheet" href="/Navbar/navbar.css">
+    <link rel="stylesheet" href="./Hammas-VS-israel.css">
+    <link rel="stylesheet" href="../../../Navbar/navbar.css">
 </head>
 <body>
     <nav>
       <nav class="navbar">
-        <div class="logo"><img src="/Hammaz-&-israel-War/img/hamas flag.jfif" class="imeg"> 
+        <div class="logo"><img src="../../../Hammaz-&-israel-War/img/hamas flag1.jpg" class="imeg"> 
         </div>                    
         <div class="search-container"> 
           <input type="text" class="searchInput" id="searchInput" placeholder="Searching...">
           <button class="searchButton" id="searchButton">
-            <img class="Sicon" src="/images/search.png" alt="Search">
+            <img class="Sicon" src="../../../images/search.png" alt="Search">
           </button>
         </div>
         <ul class="nav-links">
-            <li><a href="Palestine.html">Home</a></li>
+            <li><a href="../../../Palestine/Palestine.html">Home</a></li>
             <li class="dropdown">
                 <a href="">Services</a>
                 <ul class="dropdown-content">
@@ -31,13 +31,13 @@
             <li class="dropdown">
               <a href="">Aboutus</a>
               <ul class="dropdown-content">
-            <li><a href="/Navbar/Aboutus/Website.html">Web</a></li>
-            <li><a href="/Navbar/Aboutus/Company.html">Company</a></li>
+            <li><a href="../../../Navbar/Aboutus/Website.html">Web</a></li>
+            <li><a href="../../../Navbar/Aboutus/Company.html">Company</a></li>
               </ul>
           </li>
          
-            <li><a href="/Navbar/Contact/Contact.html">Contact</a></li>
-            <li><a href="/Navbar/Donate/Donate.html">Donate</a></li>
+            <li><a href="../../../Navbar/Contact/Contact.html">Contact</a></li>
+            <li><a href="../../../Navbar/Donate/Donate.html">Donate</a></li>
         </ul>  
         <div class="profile">
           <div class="loading-circle"></div>
@@ -65,15 +65,15 @@
         <div class="background-image"></div>
       <div class="card-container">
         <div class="card">
-          <img src="/IsraelAttackOnPalestine/images/cities.webp">
-          <h3><a href="/IsraelAttackOnPalestine/israel-Attack-om-Palestine/Israel-Attack-2023/Cities/Cities.html"></a></h3>
+          <img src="../../../IsraelAttackOnPalestine/images/cities.webp">
+          <h3><a href="../../../IsraelAttackOnPalestine/israel-Attack-om-Palestine/Israel-Attack-2023/Cities/Cities.html"></a></h3>
           <p></p>
         <button onclick="">Visit</button>
     </div>
 
    
         <div class="card">
-          <img src="/IsraelAttackOnPalestine/images/peoples 4.jpg">
+          <img src="../../../IsraelAttackOnPalestine/images/peoples 4.jpg">
       <h3><a href=""> </a></h3>
       <p></p>
             <button onclick="">Visit</button>           
@@ -81,8 +81,8 @@
 
         
     <div class="card">
-      <img src="/IsraelAttackOnPalestine/images/death 1.jfif">
-      <h3><a href="./Palestinians -Videos/israel-Attack-2023.html"></a></h3>
+      <img src="../../../IsraelAttackOnPalestine/images/death 1.jfif">
+      <h3><a href="../../Palestinians -Videos/israel-Attack-2023.html"></a></h3>
     <!-- <span>10% Disc</span> -->
     <p></p>
           <button a href="/Palestine.html">Visit</button>
@@ -91,8 +91,8 @@
 
 </div>
 </main>                  
-  <script type="module" src="/Navbar/navbar.js"></script>
-  <script type="module" src="Hammas-VS-israel.js"></script>
+  <script type="module" src="../../../Navbar/navbar.js"></script>
+  <script type="module" src="./Hammas-VS-israel.js"></script>
 </body>
 </html>
 
