--- a/Palestine/Palestine.html
+++ b/Palestine/Palestine.html
@@ -18,7 +18,7 @@
       </button>
     </div>
     <ul class="nav-links">
-        <li><a href="Palestine.html">Home</a></li>
+        <li><a href="./Palestine.html">Home</a></li>
         <li class="dropdown">
             <a href="">Services</a>
             <ul class="dropdown-content">
